0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2013-04-30)
----------------

- Added ``getStatus`` and ``setStatus``

- Testing some z3c.form rendering


0.1 (2013-04-29)
----------------

- Initial release
