@@ -1,7 +1,9 @@
 0.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add support for Python 3.5, 3.6, 3.7, 3.8 and 3.9.
+
+- Drop support for Python 2.6 and 3.3.
 
 
 0.2 (2013-04-30)
